@@ -56,6 +56,20 @@ EXTRA_DIST = starpu.css				\
 	tutorial/vector_scal_plugin.c		\
 	tutorial/vector_scal_plugin_cuda.cu
 
+starpu_tutorial_dir	=	$(docdir)/tutorial
+starpu_tutorial__DATA	=			\
+	tutorial/README				\
+	tutorial/Makefile			\
+	tutorial/hello_world.c			\
+	tutorial/hello_world_plugin.c		\
+	tutorial/vector_scal.c			\
+	tutorial/vector_scal_cpu.c		\
+	tutorial/vector_scal_cuda.cu		\
+	tutorial/vector_scal_opencl.c		\
+	tutorial/vector_scal_opencl_kernel.cl	\
+	tutorial/vector_scal_plugin.c		\
+	tutorial/vector_scal_plugin_cuda.cu
+
 dist_pdf_DATA = starpu.pdf
 dist_html_DATA = starpu.html
 
